[gd_scene load_steps=2 format=3 uid="uid://b33miyp77akwh"]

[ext_resource type="Script" uid="uid://dswlaav4a5fh8" path="res://Scenes/Menus/upgrade_tree_ui.gd" id="1_cf6ug"]

[node name="UpgradeMenu" type="CanvasLayer"]
script = ExtResource("1_cf6ug")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.30371025, 0.30235744, 0.34438694, 1)

[node name="PannableCanvas" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Content" type="Control" parent="PannableCanvas"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -500.0
offset_right = 500.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConnectionDrawer" type="Node2D" parent="PannableCanvas/Content"]

[node name="StartNode" type="Button" parent="PannableCanvas/Content"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_left = 460.0
offset_top = 460.0
offset_right = 540.0
offset_bottom = 540.0
text = "START"

[node name="BottomBar" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="BottomBar"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="BottomBar/MarginContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="BottomBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Continue Game"

[node name="LeftSpacer" type="Control" parent="BottomBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CurrencyLabel" type="Label" parent="BottomBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Points: 0 / 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EssenceLabel" type="Label" parent="BottomBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Points: 0 / 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CorruptionLabel" type="Label" parent="BottomBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Points: 0 / 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightSpacer" type="Control" parent="BottomBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
